--- a/EGNN embeddings.ipynb
+++ b/EGNN embeddings.ipynb
@@ -18,8 +18,7 @@
     "Copyright (c) DP Technology.\n",
     "\n",
     "This source code is licensed under the MIT license found in the\n",
-    "LICENSE file in the root directory of this source tree.\n",
-    "\n",
+    "LICENSE file in the root directory of this source tree.\n"
    ]
   },
   {
